--- a/src/app/leyes/leyadua/leyadua.component.css
+++ b/src/app/leyes/leyadua/leyadua.component.css
@@ -120,3 +120,31 @@ td {
     text-align: center;
     justify-content: center;
 }
+
+
+button {
+    background: #252525;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+button {
+    width: 208px;
+    height: 25px;
+    margin: 3px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background: rgb(255, 0, 0);
+    color: #ffffff;
+    font-size: 1.2rem;
+    cursor: pointer;
+    box-shadow: inset 0000 #000;
+    transition: ease-out 0.6s;
+    justify-content: center;
+}
+
+button:hover {
+
+    box-shadow: inset 230px 0000 #000000;
+    color: #ffffff;
+}
