--- a/src/app/leyes/decre2/decre2.component.html
+++ b/src/app/leyes/decre2/decre2.component.html
@@ -610,21 +610,4 @@
             cupo expedido por la Secretaría de Economía, siempre que se trate de vehículos con peso bruto vehicular
             inferior o igual a 8,864 kilogramos, será el siguiente:</p>
         <br>
-        <table>
-
-            <tr>
-                <td>Fraccion Arancelaria</td>
-                <td>Descripción</td>
-                <td></td>
-                <td></td>
-            </tr>
-
-
-
-
-
-
-
-
-
-        </table>
+   </div>
