--- a/src/app/leyes/panel/panel.component.html
+++ b/src/app/leyes/panel/panel.component.html
@@ -9,54 +9,60 @@
                 <p class="text-gray-300 text-lg mb-6">
                     Potencia tu carrera en el comercio global con nuestros cursos especializados.
                 </p>
-                <a href="#misCursos"
+                <a [routerLink]="['/panel']" fragment="misCursos"
                     class="bg-yellow-500 text-gray-900 py-2 px-6 rounded-lg hover:bg-yellow-400 transition duration-300">
                     Saber más sobre los eventos
                 </a>
             </div>
 
             <div class="mt-8 flex space-x-4">
-                <a href="#" title="Facebook" class="hover:scale-110 transition duration-300">
-                    <svg class="w-8 h-8 text-gray-300" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+                <!-- Facebook -->
+                <a href="https://www.facebook.com/cencacomercioexterior" title="Facebook"
+                    class="hover:scale-110 transition duration-300">
+                    <svg class="w-8 h-8 text-white" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 506.86 506.86">
                         <path
                             d="M506.86,253.43C506.86,113.46,393.39,0,253.43,0S0,113.46,0,253.43C0,379.92,92.68,484.77,213.83,503.78V326.69H149.48V253.43h64.35V197.6c0-63.52,37.84-98.6,95.72-98.6,27.73,0,56.73,5,56.73,5v62.36H334.33c-31.49,0-41.3,19.54-41.3,39.58v47.54h70.28l-11.23,73.26H293V503.78C414.18,484.77,506.86,379.92,506.86,253.43Z">
                         </path>
                     </svg>
                 </a>
-                <a href="#" title="Twitter" class="hover:scale-110 transition duration-300">
-                    <svg class="w-8 h-8 text-gray-300" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 333333 333333">
+
+                <!-- X (Twitter) -->
+                <a href="https://twitter.com/yourprofile" title="X (Twitter)"
+                    class="hover:scale-110 transition duration-300">
+                    <svg class="w-8 h-8 text-white" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 333333 333333">
                         <path
                             d="M166667 0c92048 0 166667 74619 166667 166667s-74619 166667-166667 166667S0 258715 0 166667 74619 0 166667 0zm90493 110539c-6654 2976-13822 4953-21307 5835 7669-4593 13533-11870 16333-20535-7168 4239-15133 7348-23574 9011-6787-7211-16426-11694-27105-11694-20504 0-37104 16610-37104 37101 0 2893 320 5722 949 8450-30852-1564-58204-16333-76513-38806-3285 5666-5022 12109-5022 18661v4c0 12866 6532 24246 16500 30882-6083-180-11804-1876-16828-4626v464c0 17993 12789 33007 29783 36400-3113 845-6400 1313-9786 1313-2398 0-4709-247-7007-665 4746 14736 18448 25478 34673 25791-12722 9967-28700 15902-46120 15902-3006 0-5935-184-8860-534 16466 10565 35972 16684 56928 16684 68271 0 105636-56577 105636-105632 0-1630-36-3209-104-4806 7251-5187 13538-11733 18514-19185l17-17-3 2z">
                         </path>
                     </svg>
                 </a>
-                <a href="#" title="LinkedIn" class="hover:scale-110 transition duration-300">
-                    <svg class="w-8 h-8 text-gray-300" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 333333 333333">
+
+                <!-- WhatsApp -->
+                <a href="https://wa.me/+5217295279859" title="WhatsApp" class="hover:scale-110 transition duration-300">
+                    <svg class="w-8 h-8 text-white" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                         <path
-                            d="M166667 0c92048 0 166667 74619 166667 166667s-74619 166667-166667 166667S0 258715 0 166667 74619 0 166667 0zm-18220 138885h28897v14814l418 1c4024-7220 13865-14814 28538-14814 30514-1 36157 18989 36157 43691v50320l-30136 1v-44607c0-10634-221-24322-15670-24322-15691 0-18096 11575-18096 23548v45382h-30109v-94013zm-20892-26114c0 8650-7020 15670-15670 15670s-15672-7020-15672-15670 7022-15670 15672-15670 15670 7020 15670 15670zm-31342 26114h31342v94013H96213v-94013z">
+                            d="M380.9 97.1C339-44.2 233.9-17.5 191.1 34.2 153.8 77.2 95.3 92.4 68.7 117.5c-28.2 27-39.2 53.1-45.8 86.5C8.1 283.8 61.9 384 153.4 423.8c13.4 5.5 27.1 8.8 41.2 10.2 27.8 2.9 55.5-3.2 80.1-16.4 7.9-4.3 8.8-12.9 7.2-20.8-2.7-13.2-3.4-26.6-6-39.7-2.5-13-15-19.3-26.4-13.8-22.6 10.7-45.6 10.8-69.3 3.3-30.8-10.6-55.6-30.9-78.2-53.6-17.6-17.7-30.8-39.8-38.4-63.9-3.4-10.8-3.2-25.3 4.1-35.2 8-10.9 25.2-11.7 35.8-2.8 20.8 17.4 40.1 37.4 61.2 54.9 15.5 12.8 29.1 29.3 45.4 41.1 11.1 8.2 21.4 16.9 34.1 21.1 18.4 6.2 36.9 12.4 55.5 18.4 10.5 3.4 21.8 5.7 32.8 7.2 11.8 1.6 23.8 1.9 35.6-1.5 16.8-4.6 31.5-14.7 44.6-26.5 43.1-39.5 78.8-88.7 104.5-144.2 7.8-16.6 14.8-34 19.5-51.8 12.3-45.7-11.1-78.8-41.5-93.7z">
                         </path>
                     </svg>
                 </a>
             </div>
+
         </div>
     </div>
     <br>
     <br>
 
-    <div class="container mx-auto py-8 px-4">
+    <div class="container mx-auto py-8 px-4" id="misCursos">
         <h1 class="text-3xl font-bold text-center mb-6">Nuestros Eventos</h1>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" id="misCursos">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
             <div *ngFor="let curso of cursos"
                 class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-                <img [src]="curso.imagen" [alt]="curso.titulo" class="w-full h-48 object-cover">
+                <img [src]="curso.imagen" [alt]="curso.titulo" class="w-full h-100 object-cover">
                 <div class="p-6">
                     <h2 class="text-2xl font-bold text-gray-800">{{ curso.titulo }}</h2>
                     <p class="mt-2 text-gray-600">{{ curso.descripcion }}</p>
-                    <button class="mt-4 bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition-colors">
-                        Ver Curso
-                    </button>
+
                 </div>
             </div>
         </div>
