se agregan complements y se mejora el diseño

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -9,8 +9,7 @@
 
 <!-- Barra lateral -->
 <aside [ngClass]="{'-translate-x-full': !isSidebarOpen, 'translate-x-0': isSidebarOpen}"
-    class="bg-gradient-to-r from-gray-800 to-red-600 fixed inset-0 z-50 h-full w-72 rounded-xl shadow-lg transition-transform duration-300 xl:translate-x-0 overflow-y-auto">
-
+    class="bg-gradient-to-r from-gray-800 to-red-600 fixed inset-0 z-50 h-full w-72 shadow-lg transition-transform duration-300 xl:translate-x-0 overflow-y-auto">
     <!-- Encabezado de la barra lateral -->
     <div class="relative border-b border-white/30">
         <img src="locenca.png" alt="Logo" class="rotate-on-hover w-20 h-20 mx-auto mt-4">
